k3d-cluster/api-demo/templates/http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-api-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /songs
            pathType: Prefix
            backend:
              service:
                name: go-api-svc
                port:
                  number: 80
